# slircd-ng

./: .gitignore  AGENT_TESTING.md  ALPHA_RELEASE_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  AUDIT.md  AUDIT_2025-12-06.md  AUDIT_AND_PATH_FORWARD.md  AUDIT_COMPLIANCE_TRUTH.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY.txt  BOUNCER_AUDIT_2026-01-14.md  BOUNCER_DESIGN.md  BOUNCER_WIRING_COMPLETE.md  CHANGELOG.md  CI_DIAGNOSTIC.md  CI_NOTES.md  COMMIT_MSG  COMMIT_MSG_AI_DOCS  COMMIT_MSG_DOCS  COMPETITIVE_ANALYSIS.md  Cargo.toml  DATABASE_AUDIT_REPORT.md  DEPLOYMENT_CHECKLIST.md  DRY_REFACTOR_PLAN.md  FOR_REVIEW_2026-01-16_MULTICLIENT_SYNC.md  FOR_SID_REVIEW_2026-01-15.md  IMPLEMENTATION.md  INFRASTRUCTURE_SESSION_SUMMARY.md  IRCTEST_FIX_STRATEGY.md  IRCTEST_SESSION_REPORT.md  ISSUES_PRIORITY.md  ISSUE_RESOLUTION.md  MASTER_CONTEXT.md  METRICS_IMPLEMENTATION_REPORT.md  Master_Context_&_Learnings.md  NEW_README.md  PHASE2_COMPLETE.md  PROJECT_AUDIT.md  PROTOCOL_COMPLETENESS_AUDIT.md  (+46 more)
.agent/: PROJECT_PHILOSOPHY.md
.agent/rules/: slirc-ng-rules.md
.github/: Master_Context_&_Learnings.md  copilot-instructions.md
.github/workflows/: ci.yml  compliance.yml  copilot-setup-steps.yml  release.yml
benches/: throughput.rs
contrib/legacy/: MIGRATION_LOG.md  README.md
crates/slirc-crdt/: Cargo.toml
crates/slirc-crdt/src/: channel.rs  clock.rs  traits.rs  user.rs
crates/slirc-proto/: .gitignore  Cargo.toml  Master_Context_&_Learnings.md  README.md
crates/slirc-proto/.github/: copilot-instructions.md
crates/slirc-proto/.github/workflows/: copilot-setup-steps.yml
crates/slirc-proto/benches/: parsing.rs
crates/slirc-proto/examples/: bot.rs  check_casemap.rs  compliance_check.rs  ctcp_handler.rs  isupport_parser.rs  repro_tags.rs  sasl_auth.rs  simple_client.rs  websocket_server.rs  zero_copy_server.rs
crates/slirc-proto/fuzz/: Cargo.toml  README.md  run_all.sh
crates/slirc-proto/fuzz/fuzz_targets/: ctcp_parser.rs  message_parser.rs  mode_parser.rs  prefix_parser.rs
crates/slirc-proto/src/: casemap.rs  chan.rs  colors.rs  ctcp.rs  error.rs  format.rs  irc.rs  lib.rs  line.rs  nick.rs  scanner.rs  util.rs  websocket.rs
crates/slirc-proto/src/caps/: mod.rs  negotiation.rs  registry.rs
crates/slirc-proto/src/command/: mod.rs  serialize.rs  types.rs  util.rs
crates/slirc-proto/src/command/parse/: channel.rs  connection.rs  ircv3.rs  messaging.rs  mod.rs  server.rs  user.rs
crates/slirc-proto/src/command/subcommands/: batch.rs  cap.rs  chathistory.rs  metadata.rs  mod.rs
crates/slirc-proto/src/compliance/: mod.rs
crates/slirc-proto/src/crdt/: clock.rs  gset.rs  lww.rs  mod.rs  orset.rs
crates/slirc-proto/src/encode/: command.rs  message.rs  mod.rs
crates/slirc-proto/src/ircv3/: batch.rs  mod.rs  msgid.rs  server_time.rs
crates/slirc-proto/src/isupport/: mod.rs  parser.rs  tokens.rs
crates/slirc-proto/src/message/: borrowed.rs  mod.rs  nom_parser.rs  parse.rs  serialize.rs  tags.rs  types.rs
crates/slirc-proto/src/mode/: mod.rs  parse.rs  types.rs
crates/slirc-proto/src/prefix/: mod.rs  serialize.rs  types.rs
crates/slirc-proto/src/response/: constructors.rs  errors.rs  helpers.rs  mod.rs  numerics.rs
crates/slirc-proto/src/sasl/: external.rs  mod.rs  plain.rs  scram.rs
crates/slirc-proto/src/state/: mod.rs  sync.rs  tracker.rs
crates/slirc-proto/src/sync/: channel.rs  clock.rs  mod.rs  traits.rs  user.rs
crates/slirc-proto/src/transport/: error.rs  framed.rs  mod.rs  parts.rs
crates/slirc-proto/src/transport/zero_copy/: helpers.rs  mod.rs  tcp.rs  trait_def.rs  unified.rs  websocket.rs
crates/slirc-proto/tests/: compliance_check.rs  control_chars.rs  convenience_constructors.rs  error_handling.rs  isupport_builder.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  rfc_ircv3_compliance.rs  s2s_protocol.rs  tags_compliance.rs  transport_integration.rs
docs/: ARCHITECTURE.md  AUDIT_ACTION_PLAN.md  COMMANDS.md  COMPLIANCE_REPORT.md  COMPLIANCE_STATUS.md  COMPLIANCE_TODO.md  CONFIGURATION.md  DOCUMENTATION_PLAN.md  HOWTO.md  IMPLEMENTATION.md  IRCTEST_PLAN.md  MODES.md  MODULE_MAP.md  OPERATORS.md  PHASE3_MIGRATION_PLAN.md  PHASE_1_CORE_GAPS.md  PHASE_2_OPERATIONAL.md  PHASE_3_VALIDATION.md  PRODUCTION_ROADMAP.md  RFC_COMPLIANCE.md  RFC_COMPLIANCE_AUDIT.md  ROADMAP.md  S2S_PROTOCOL.md  S2S_STATUS.md  SECURITY.md  SERVICES.md  STEP_2_3_RATE_LIMITING_REPORT.md  TODO.md  TYPESTATE_PHASE2_COMPLETION.md  TYPESTATE_PHASE2_RESUMPTION.md  WEBSOCKET_AND_IP_CLOAKING.md  XLINE_IMPLEMENTATION_REPORT.md
docs/planning/: CHANNEL_OPS_BASELINE.md  PHASE3_TODO.md  TYPESTATE_PHASE3_TRUE_ENFORCEMENT.md
docs/templates/: RFC_HANDLER_TEMPLATE.md
examples/: swarm.rs
migrations/: 001_init.sql  002_shuns.sql  002_xlines.sql  003_history.sql  005_certfp.sql  005_channel_topics.sql  007_reputation.sql  008_channels.sql  008_scram_verifiers.sql  010_metadata.sql
plan/: feature-bouncer-architecture-1.md
scripts/: audit_compliance.py  irc-test.sh  irctest_safe.sh  load_test.py  rfc-compliance-check.sh  run-e2e-tests.sh  run-irctest.sh  run_irctest.sh  run_irctest_safe.py  serverctl.sh  start-test-server.sh
src/: config.rs  error.rs  http.rs  main.rs  metrics.rs  telemetry.rs
src/caps/: authority.rs  irc.rs  mod.rs  tokens.rs
src/config/: defaults.rs  history.rs  limits.rs  links.rs  listen.rs  mod.rs  multiclient.rs  oper.rs  security.rs  (+2 more)
tests/: channel_flow.rs  channel_ops.rs  channel_queries.rs  chathistory.rs  chrono_check.rs  compliance.rs  connection_lifecycle.rs  distributed_channel_sync.rs  distributed_convergence.rs  integration_bouncer.rs  integration_partition.rs  integration_rehash.rs  ircv3_features.rs  ircv3_gaps.rs  operator_commands.rs  operator_moderation.rs  s2s_two_server.rs  sasl_buffer_overflow.rs  sasl_external.rs  security_channel_freeze.rs  security_channel_key.rs  security_flood_dos.rs  security_join_flood.rs  security_join_limit.rs  security_privmsg_dos.rs  security_slow_handshake.rs  server_queries.rs  services_chanserv.rs  stress_sasl.rs  unified_read_state.rs  user_commands.rs
website/: README.md  index.html
(+401 files in other folders)
