[package]
name = "slircd-ng"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "Straylight IRC Daemon - Next Generation"

[[bin]]
name = "slircd"
path = "src/main.rs"

[dependencies]
# Protocol core (use path for workspace dev, git for standalone builds)
slirc-proto = { path = "../slirc-proto", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"

# Concurrent state
dashmap = "6"
parking_lot = "0.12"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# TLS support
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

# Crypto (password hashing)
argon2 = "0.5"
rand = "0.8"

# Security (cloaking, rate limiting)
hmac = "0.12"
governor = "0.6"
regex = "1.10"

# WebSocket support
tokio-tungstenite = "0.21"
sha2 = "0.10"
http = "1.4.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
axum = "0.7"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }

# High-performance IP deny list (Dual-Engine Architecture)
roaring = "0.10"
rmp-serde = "1.1"
ipnet = "2.9"
aho-corasick = "1.1.4"
bcrypt = "0.17.1"
im = "15.1.0"
redb = "3.1.0"
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
