[package]
name = "slircd-ng"
version = "1.0.0-rc.1"
edition = "2024"
license = "Unlicense"
description = "Straylight IRC Daemon - Next Generation"
repository = "https://github.com/sid3xyz/slircd-ng"
readme = "README.md"
keywords = ["irc", "ircd", "server", "async", "tokio"]
categories = ["network-programming"]

[workspace]
members = [".", "crates/slirc-proto"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[[bin]]
name = "slircd"
path = "src/main.rs"

[dependencies]
# Protocol core (use workspace path)
slirc-proto = { path = "crates/slirc-proto", features = ["tokio", "sync"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"

# Concurrent state
dashmap = "6"
parking_lot = "0.12"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# TLS support
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
rustls-native-certs = "0.8"

# Crypto (password hashing)
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
scram = "0.6"
base64 = "0.22"
ring = "0.17"
subtle = "2.5"

# Security (cloaking, rate limiting)
hmac = "0.12"
governor = "0.6"
regex = "1.10"
confusables = "0.1"

# WebSocket support
tokio-tungstenite = "0.21"
sha2 = "0.10"
http = "1.4.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
axum = "0.7"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }

# High-performance IP deny list (Dual-Engine Architecture)
roaring = "0.10"
rmp-serde = "1.1"
ipnet = "2.9"
aho-corasick = "1.1.4"
bcrypt = "0.17.1"
im = "15.1.0"
redb = "3.1.0"
hickory-resolver = { version = "0.25.2", features = ["tokio"] }

# HTTP client for privacy-preserving RBL API calls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
nonzero_ext = "0.3.0"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false
