[package]
name = "slirc-crdt"
version = "0.1.0"
edition = "2021"
description = "Conflict-free Replicated Data Types for distributed IRC state synchronization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sid3xyz/slirc-crdt"

[lints]
workspace = true

[dependencies]
# Core data structures
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

# For CRDT vector clocks and timestamps
slirc-proto = { path = "../slirc-proto" }

[dev-dependencies]
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
