[package]
name = "slirc-proto"
version = "1.3.0"
authors = ["Straylight Team <StrayLight@sid3.xyz>"]
edition = "2021"
rust-version = "1.70"
description = "A robust IRC protocol library for parsing and encoding IRC messages with full IRCv3 support."
repository = "https://github.com/sid3xyz/slirc-proto"
license = "Unlicense"
keywords = ["irc", "protocol", "tokio", "ircv3", "parser"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"
publish = false

[features]
default = ["tokio"]
tokio = [
    "bytes",
    "dep:tokio",
    "tokio-util",
    "futures-util",
    "anyhow",
    "socket2",
    "tokio-rustls",
    "tokio-tungstenite",
    "tracing",
]
proptest = ["dep:proptest"]
serde = ["dep:serde"]
scram = ["sha2", "hmac", "pbkdf2", "getrandom"]

[dependencies]
encoding = { package = "encoding_rs", version = "0.8", optional = true }
thiserror = "1.0.40"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

bytes = { version = "1.4.0", optional = true }
tokio = { version = "1.27.0", features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
], optional = true }
tokio-util = { version = "0.7.7", features = ["codec"], optional = true }
futures-util = { version = "0.3", optional = true }
nom = "7"
smallvec = "1.15.1"

anyhow = { version = "1.0", optional = true }
socket2 = { version = "0.5", optional = true }
tokio-rustls = { version = "0.26", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
tracing = { version = "0.1", optional = true }
base64 = "0.22.1"
proptest = { version = "1.4", optional = true }

# SCRAM-SHA-256 crypto dependencies (optional)
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", default-features = false, optional = true }
getrandom = { version = "0.2", optional = true }

# CRDT support
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "parsing"
harness = false
